@@ -6,6 +6,9 @@ versions of Red5.
 
 Red5 0.6    (unreleased)
 ------------------------
+New features:
+- Stream classes can be configured through red5-common.xml (Trac #223)
+
 Bugfixes:
 - serialize RecordSet objects (Trac #201)
 
